--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
             <input type="number" class="input_area">
         </div>
         <hr>
+        <div>
+            <h3>URL:</h3>
+        </div>
+        <hr>
+        <div>
+            <h3>Date:</h3>
+            <input type="date" class="input_area my_input">
+        </div>
+        <hr>
+        <div>
+            <h3>Time:</h3>
+            <input type="time" class="input_area my_input">
+        </div>
+        <hr>
 
     </section>
 </body>
