--- a/index.html
+++ b/index.html
@@ -50,6 +50,49 @@
             <input type="time" class="input_area my_input">
         </div>
         <hr>
+        <div>
+            <h3>Color:</h3>
+        </div>
+        <hr>
+        <div>
+            <h3>Select:</h3>
+            <h3>Select Option 1</h3>
+        </div>
+        <hr>
+        <div class="my_select">
+            <h2>Checkbox</h2>
+            <div class="checkbox_items">
+                <div>
+                    <input type="checkbox">
+                    <label>Checkbox Option 1</label><br>
+                    <input type="checkbox">
+                    <label>Checkbox Option 2</label>
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>Checkbox Option 2</label>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="my_select">
+            <h2>Radio</h2>
+            <div class="checkbox_items">
+                <div>
+                    <input type="radio">
+                    <label> Option 1</label><br>
+                    <input type="radio">
+                    <label> Option 2</label>
+                </div>
+                <div>
+                    <input type="radio">
+                    <label> Option 2</label><br>
+                    <input type="radio">
+                    <label> Option 2</label>
+                </div>
+            </div>
+        </div>
+        <hr>
 
     </section>
 </body>
